<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lucid Dream Kit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="s">Share</string>
    <color name="teal">#00CCFF</color>
	<string name="v1">Next Video</string>
	<string name="v2">Previous Video</string>
    <string name="check">Reality Checks</string>
    <string name="journal">Dream Journal</string>
    <string name="symbol">Dream Symbols</string>
    <string name="beat">Binaural Beats</string>
    <string name="meaning">Dream Meaning</string>
    <string name="header"><b>How to Have a Lucid Dream</b></string>
    <string name="readj">Open Journal</string>
    <string name="meanings">Dream Meanings</string>
    <string name="symbols">Dream symbols\n\nThese symbols are elements of a dream that might represent some aspect of one\'s daily life.  
	    There are many different kind of dream symbols.  For example, piano, tennis, school, and friends are a few of my dream symbols.
	    Even though these are things that I experience every day, they hold a great deal of meaning when I dream about them,
	    because it can reflect my subconscious state of mind.  Whether I feel happy, anxious, depressed, angry, excited,
	    overjoyed, or proud.  Dream Symbols are very important to note, because they can teach you a lot about your life, thoughts, and desires.  </string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="label1">	    Close your mouth.</string>
    <string name="label2">	    Jump.</string>
    <string name="label3">	    Read.</string>
    <string name="label4">	   Mirror.</string>
    <string name="label5">	   Fly.</string>
    <string name="label6">	   Magic.</string>
    <string name="label7">	   Watch.</string>
    <string name="label8">	 	Check Palms.</string>
    <string name="label9">	  	Math.</string>
    <string name="label10">	  	Vision?</string>
    <string name="label11">	  	Ask!</string>
    <string name="label12">	  	Induce.</string>
    <string name="checkData0"><b>What is a reality Check?</b>\n
	    A reality check is an action you take to determine whether or not you are dreaming.\n
	    There are many different kinds of reality checks.\n By practicing these checks in real life, 
	    you increase your chances of performing one in a dream, thus increasing your chances of
	    becoming lucid.\n\n</string>
    <string name="checkData1">	    1.  Try closing your mouth while squeezing your nose shut.  If you can still breathe, 
	    you are in a dream!\n\n</string>
    <string name="checkData2">	    2.  Jump, just like you normally would in real life.  If you don\'t fall back down normally,
	    you are in a dream!\n\n</string>
    <string name="checkData3">	    3.  Try to read text.  If the words change, or become blurry, or you just can\'t seem to read them,
	    then you are in a dream!\n\n</string>
    <string name="read">	    Read.</string>
    <string name="checkData4">	    4.  Go look in the mirror.  Many times, a dream mirror will reflect your true view of yourself. 
	    In a dream, your skin might sparkle, or you might look like a horrible monster.</string>
    <string name="checkData5">	    5.  Attempt to fly.  Obviously, people can\'t fly in reality.  But in a dream, anything is possible.\n
	    Everyone is different, so everyone will have slightly different "requirements" to fly in a dream. \n
	    For me, I always start running and then hold my arms out, like Superman, to fly.  Other people can
	    just float, or hover in the air.  Try it out in reality, no matter how ridiculous you feel, and you
	    will increase your chances of flying in a lucid dream.\n\n</string>
    <string name="checkData6">	    6.  Try to shove your hand through a wall.  Now, be careful.  Don\'t go driving into brick walls.  This
	    isn\'t Harry Potter&#8230;  But if you focus all of your energy into making your hand (or any body part, really)
	    go through a solid object, this might work in a dream.  However, it\'s more difficult to pull off than the \n
	    other reality checks, so it\'s not the primary one I\'d recommend.\n\n</string>
    <string name="checkData7">	    7.  Try to read your watch, or a clock.  If you wear a watch, this is a perfect way to become lucid in a dream.\n
	    Look at the time.  Then look away.  Look back again.  If the time changes, you are in a dream!\n\n</string>
    <string name="checkData8">	    8.  Stare at your palms.  As strange as this one sounds, your palms might actually look different in a dream.\n
	    They could be covered in black muck, or sparkly with white spots.  There\'s many different possibilities.\n\n</string>
    <string name="checkData9">	    9.  Try adding or subtracting numbers in your head.  If you have trouble, you\'re probably dreaming. (I hope)\n\n</string>
    <string name="checkData10">	    10. Look around.  Has your vision changed, in an odd way?  Maybe one eye can only see black and white.  Or you\'ll
	    be totally blind in one or both eyes, in a dream.\n\n  </string>
    <string name="checkData11">	    11. Ask someone if you are dreaming.  Even though dream characters are simply figments of your imagination, many
	    times, they\'ll tell you the truth about whether you\'re in reality or not. </string>
    <string name="checkData12">	    12. Set your alarm for about 3 or 4 am.  When you wake up, stay awake for about 10 minutes, thinking about your last
	    dreams.  \nTry to remember in full detail, and when you sleep again, place yourself back into the dream or tell yourself
	    continually that you are dreaming, to have your own dream.\n  If you can successfully enter a dream, you\'ve completed
	    a MILD (Mnemonic Induced Lucid Dream).  A common alternative to this is to attempt a WILD (Wake Induced Lucid Dream) by
	    trying to visualize the exact dream you want before you sleep every night.  However, this second method is much more
	    difficult, so you should only try it if you are an experienced or natural lucid dreamer.</string>
    <string name="w"><center><b>Write down your dreams every night.</b></center></string>
    <string name="write">	   Everyone spends about 1/3 of their lives
	    asleep.  Personally, I\'d like to remember what I did in that time, what I was thinking about, or what sorts of symbols
	    in my dreams apply to my daily life.  <b>This is arguably the most important part of becoming a lucid dreamer,</b> because
	    if you can\'t remember that you had a lucid dream, it is as if you never had one at all.  Writing down your dreams every
	    night tells your mind that you want to remember your dreams, and the more you write,
	    the more dreams you will remember, and the easier it will be to remember specific details or the entire dream.</string>
    <string name="realJournal"><b>Click Here to log your dream\n journal for tonight!</b></string>
    <string name="dream">	    Enter your dream here.</string>
    <string name="submitdream">	    Submit Dream</string>
    <string name="title_activity_beat">Beat</string>
    <string name="b1">Next Dictionary</string>
    <string name="b2">Previous Dictionary</string>
    <string name="headphones">Use Headphones! :)</string>
    <string name="toast">What is a dream symbol?</string>
    <string name="lucid">A Lucid Dream is a dream where you know you are dreaming.</string>

</resources>
