<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:fontFamily="Snap ITC"
        android:padding="10dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
     />

    <Button
        android:id="@+id/check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/check" />

    <Button
        android:id="@+id/journal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="start_journal"
        android:text="@string/journal" />

    <Button
        android:id="@+id/symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/symbol" />

    <Button
        android:id="@+id/beat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/beat" />

    <Button
        android:id="@+id/mean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/meaning" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="bottom"
        android:layout_weight="0.01"
        android:padding="10dp"
        android:text="@string/lucid"
        android:textAlignment="center"
       android:fontFamily="Snap ITC"

        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
 />

</LinearLayout>