<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/submitdream"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/submitdream"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_dream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".49"
        android:ems="10"
        android:hint="@string/dream" >

      
    </EditText>

    <Button
        android:id="@+id/readmyj"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:padding="10dp"
        android:text="@string/readj"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

         <ImageButton
             android:id="@+id/share"
             android:layout_width="150dp"
             android:layout_height="fill_parent"
             android:layout_gravity="right"
             android:background="@drawable/share"
             android:contentDescription="@string/s"
             />

         <ImageButton
             android:id="@+id/share2"
             android:layout_width="166dp"
             android:layout_height="fill_parent"
             android:background="@drawable/share2"
             android:contentDescription="@string/s" />
        
    </LinearLayout>

   
</LinearLayout>