<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_weight=".01"
        android:text="@string/meaning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <WebView
        android:id="@+id/meaning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="0.71" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:layout_weight="0.1" />
		<Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:layout_weight="0.1" />
    </TableRow>

</LinearLayout>